Add "Types - String - Templates" example.